--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "morgan": "~1.1.1",
     "body-parser": "~1.4.3",
     "method-override": "~2.1.1",
-    "bcrypt": "~0.8.0"
+    "bcrypt": "~0.8.0",
+    "cookie-parser": "~1.3.3",
+    "express-session": "~1.9.1"
   }
 }
